k8-manifests/service/clusterIP/jaswanth-svc-mongodb.yml
apiVersion: v1  
kind: Service  
metadata:  
  name: mongodb  
  labels:  
    stackroute.k8: mongodb  
spec:  
  ports:  
    - port: 27017  
      protocol: TCP  
  selector:  
    stackroute.k8: mongodb
