k8-manifests/service/clusterIP/jaswanth-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jaswanth-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: jaswanth-nodeport-svc-springbootcrud
    servicePort: 80
  rules:
   - http:
      paths:
      - path: /v1/*
        backend:
          serviceName: jaswanth-nodeport-svc-springbootcrud
          servicePort: 80
      - path: /v2/*
        backend:
          serviceName: jaswanth-svc-nodeport-springbootcrud-dockerdependency
          servicePort: 84
